--- a/style.css
+++ b/style.css
@@ -96,17 +96,21 @@
   font-family: Poppins;
   color: #184a57;
   font-size: 2.5rem;
+  font-weight: bold;
   text-align: center;
   margin-bottom: 40px;
 }
 
+/* for side by side view */
 .places-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: 1fr 1fr; */
   gap: 30px;
   padding: 20px;
 }
 
+/* The card itself */
 .place-card {
   background: white;
   border-radius: 15px;
@@ -117,7 +121,7 @@
 }
 
 .place-card:hover {
-  transform: translateY(-5px);
+  transform: translateY(-10px);
 }
 
 .place-image {
@@ -135,16 +139,17 @@
   font-size: 1.5rem;
   color: #184a57;
   margin-bottom: 10px;
+  text-align: center;
 }
 
-.place-description {
+/* .place-description {
   font-family: Poppins;
   color: #666;
   font-size: 0.9rem;
   line-height: 1.5;
-}
+} */
 
-.view-activities-btn {
+/* .view-activities-btn {
   background-color: #184a57;
   color: white;
   border: none;
@@ -241,4 +246,4 @@
   color: #184a57;
   font-size: 0.9rem;
   display: block;
-}
+} */
